# qttvdb

./: CMakeLists.txt  INSTALL  QtTvDB.pc.in  README.md  gitignore
cmake/modules/: CMakeLists.txt  FindQtTvDB.cmake
examples/: CMakeLists.txt  main.cpp  test.cpp  test.h
scripts/: qttvdbmoc.py
src/: CMakeLists.txt  banner.cpp  episode.cpp  mirrors.cpp  qttvdb.h  qttvdb.h.in  qttvdb_export.h  show.cpp  src.pro
